CODE-feat-41a50.18: Rid of global variable $supernova

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -589,7 +589,7 @@ xsolla - передавать описание платежа
 
   HyperNova
   ---------
-    [*] Сверхбыстрый режим - работа только с xcache - но это только после того, как разберусь с $supernova
+    [*] Сверхбыстрый режим - работа только с xcache - но это только после того, как разберусь с classSupernova
     [*] xcache
         Для блокирования записи использовать xcache_inc/xcache_dec:
         xcache_inc = 1 => мы блокировали данную запись, можно работать
@@ -785,7 +785,7 @@ xsolla - передавать описание платежа
     [*] !!! Некоторые групповые запросы не обязательно спускать в БД! Достаточно пройтись и позаменять по кэшу! Все равно если нужно будет что-то не из кэша - его потом можно будет подтянуть!
     [*] Все set_ функции заставить в качестве сета давать список полей а-ля db_prepare_changeset
     [*] В db_changeset_apply - сделать так же изменение соответствующей информации в кэше
-    [*] $supernova: оптимизировать количество SQL-запросов
+    [*] classSupernova: оптимизировать количество SQL-запросов
     [*] Всегда приводить емейлы к нижнему регистру!
     [*] Пересчитывать скорости постройки при достройке верфи/нанофабрики
     [*] //todo $fields
@@ -858,7 +858,7 @@ xsolla - передавать описание платежа
 ======================
 
 
-Текущий билд #41a1.0#
+Текущий билд #41a50.18#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять fleet_update_last
