DBAL-misc-41a51.43: Working on separate DANGER from NOT DANGER

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -790,7 +790,7 @@ xsolla - передавать описание платежа
     [*] Пересчитывать скорости постройки при достройке верфи/нанофабрики
     [*] //todo $fields
     [*] ОБНОВЛЕНИЕ - сделать разбор {{table}} при upd_alter_table
-    [*] db_change_units()  // TODO: THIS FUNCTION IS OBSOLETE AND SHOULD BE REPLACED!  // TODO - ТОЛЬКО ДЛЯ РЕСУРСОВ  проверить по модулям  переименовать в db_change_resources()  И вообще избавиться от неё
+    [*] db_change_resources()  // TODO: THIS FUNCTION IS OBSOLETE AND SHOULD BE REPLACED!  // TODO - ТОЛЬКО ДЛЯ РЕСУРСОВ  проверить по модулям  переименовать в db_change_resources()  И вообще избавиться от неё
     [*] Возвращать в пакетах индексы - и уже затем получать инфу по индексам, что бы не засирать память
 
 
@@ -858,7 +858,7 @@ xsolla - передавать описание платежа
 ======================
 
 
-Текущий билд #41a50.18#
+Текущий билд #41a51.43#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять fleet_update_last
