CODE-misc-41a60.25: Added some config vars

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -10,6 +10,15 @@ Stay out of my shed
 Антишпионская сеть - на время, за ТМ? Сбивает всех шпионов, так что игрок не получает инфы о планете
 
 
+
+XXX:
+"боеприпас повышенного могущества". Это нормальный термин?
+YYY:
+Это артиллерийский термин. Там боеприпасы разделяются по могуществу, властности и блистательности.
+ZZZ:
+Есть еще градация по напыщенности и ослепительности
+
+
 There is not really much difference between the three.
 gzencode() uses the fully self-contained gzip format, same as the gzip command line tool
     gzdecode() is defined only for PHP 5.4.0 or newer
@@ -858,7 +867,7 @@ xsolla - передавать описание платежа
 ======================
 
 
-Текущий билд #41a1.0#
+Текущий билд #41a60.25#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять fleet_update_last
