--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,6 +9,258 @@
 [@] Эта информация будет интересна только админам и/или разработчикам/This information is only for administrators and/or developers
 
 
+Project "SuperNova.WS" Release 42 "8th anniversary"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[#] core_festival 5a5.1 - Модуль "Фестивали"
+    (!) Хайспот/Ивент "Чёрная Луна"
+        Во вселенной появляются специальные Чёрные Луны, с которых при нахождении флота в Удержании капает ТМ игрокам
+        Админка:
+            - Команда на вычисление лун
+            - Вывод вычисленных лун
+            - Подключено и оттестировано создание лун
+            - Добавлена индикация активных лун
+            - Список флотов на каждой луне - включая владельца, доход, размер флота
+            - Список доходов каждого игрока, держащего флот в удержании
+            - Добавлена индикация поля обломков вокруг каждой из лун
+            - Добавлена сортировка пользователей по количеству ТМ в тик по убыванию
+            - Изменено цветовое кодирование процента получения ТМ:
+                - Красный - больше 100%;
+                - Синий - ровно 100%;
+                - Зеленый - >= 50%;
+                - Жёлтый - >= 10%;
+                - Оранжевый - >= 10%.
+            - Изменено цветовое кодирование имени игрока в таблице ЧЛ:
+                - Красный - игрок стоит ниже своего брэкета! Такого быть не должно - ошибка!
+                - Без цвета/Белый - игрок стоит в своём брэкете;
+                - Зеленый - на один брэкет выше;
+                - Желтый - на два брэкета выше;
+                - Оранжевый - на три или более брэкета выше.
+        Теперь тики по необходимости обновляют онлайн игроков-ботов - что бы те не превратились в и-шки
+
+    (!) Highspot "8 Марта":
+        При включённом Ивенте в навбаре в конце основного блока кнопок появляется новая кнопка, ведущая на страницу Ивента
+        На странице Ивента игрок с указанным в профиле мужским полом может подарить метаматерию игроку-женщине
+        Подарок будет снят со счёта игрока-мужчины и зачислен на счёт игрока-женщине
+        При зачислении игроку-женщине будет начислено на 25% больше ММ
+        Минимальное количество снимаемой метаматерии - 20.000 ММ
+        Игрок-мужчина может увидеть кому он делал подарки, сколько было списано со счёта и сколько было начислено
+        Добавлена информация об общей сумме сделанных подарков на мужской странице
+        Добавлена информация на женской странице о сумме и количестве полученной ММ
+        На мужской странице добавлена индикация позиции в конкурсе Кавалеров
+        На женской странице добавлена индикация позиции в конкурсе "Королева Весны"
+        Добавлена админская страница для автоматизированного награждения победителей конкурса
+
+    (!) Хайспот/Приз за ММ
+        Из хайспота SuperBorn выделен код, отвечающий за индикацию Памятного Знака за полученную ММ
+        На странице "Император" добавлен раздел "Приз за ММ":
+            - Индикация количества полученной ММ и названию соответствующей Медали;
+            - Индикация места в общей таблице призёров;
+            - Переверстан вывод данных в виде таблице;
+            - Добавлен HTML-якорь "mm_race";
+            - При нулевом количестве ММ у игрока в рамках Конкурса - на странице Императора показывается заглушка
+        Добавлена админка для просмотра общей таблицы призёров
+
+    (~) Админка:
+        Фестивали сортируются от новых к старым
+        Исправлена ошибка замены пункта меню "Тёмная Материя" на пункт меню "Фестивали" - теперь новый пункт добавляется сверху
+    (~) Прочее:
+        Хайспот/Паззл: Иконки хайспота в навбаре перенесены из отдельного блока в общий блок
+        День Космонавтики: Добавлены смайлы к Дню Космонавтики
+        Фестивали: Фестиваль считается активным только если имеет хоть один активный хайспот
+
+
+[#] admin_stat 0a0.2 - Модуль "Массовые операции"
+    Из админки перенеыены отдельно стоящие отчёты "Онлайн игроков", "Регистрации игроков" и "Игроки-боты"
+    Добавлены файлы локализации
+
+[#] player_award 0c9 - Модуль "Награды игроков"
+    (+) ДР СН
+        Добавлены памятный знаки для ивента "День Рождения СН" 2016 и 2017 годов
+    (+) Кавалер-2017
+        Памятный знак за подарок Даме в ходе ивента "8 марта 2017 года"
+        Медаль "Лучший Кавалер-2017"
+        Добавлена медаль "Королева Весны-2017"
+    (~) Картинки
+        Еще немного уменьшены размеры картинок
+    (@) Код
+        Добавлены методы для взаимодействия с другими модулями
+        Почищен код
+
+[!] Обучение
+    Добавлен блок "Обучение" в навбар:
+        - Заголовок с кнопкой "Закрыть" (действует только на текущей странице)
+        - Основной текстовой блок с картинкой Советника
+        - Блок с кнопками
+        - Футер
+    В "Настройки" добавлены опции:
+        - Новые опции располагаются на вкладке "Интерфейс", подвкладка "Обучение"
+        - Опция отключения Обучения
+        - Опция показа Обучения во всплывающем окне (popup)
+    Работающие кнопки "Вперед", "Назад", "Закончить"
+    Подгрузка новых текстов через AJAX
+    Теперь обучение можно открыть в окне
+        - По умолчанию окно открывается в правом нижнем углу страницы
+        - Окно прилеплено и не меняет местоположение при скролле
+        - Окно можно перемещать по странице, таская его за заголовок
+        - Статус обучения (на странице в навбаре или в окне), а так же положение окна на экране сохраняется в куках отдельно на каждом устройстве
+    Теперь можно задать ID первого текста из таблицы `text` в обучаловке - опция 'tutorial_first_item' в таблице `config`
+    Теперь при сбросе обучения так же сбрасывается статус "обучение завершено"
+    Текст и заголовок Обучения теперь могут использовать bbCode
+    В настояшее время "Обучение" включает только инструкцию по пользованию "Обучением"
+[!] Навбар
+    Новый ресурсбар (количество ресурсов на планете/в Альянсе) - теперь встроенный в навбар
+    Выводится количество ресурсов на планете, а для электроэнергии - баланс (т.е. производство минус потребление)
+    При наведении курсора мыши на ячейку с ресурсом (металл, кристалл, дейтерий) появляется попап, в котором указывается:
+        - Полное название ресурса;
+        - Количество ресурсов на складе;
+        - Размер склада;
+        - Заполнение склада в процентах
+    При открытом попапе клик на ячейку закроет попап
+    Так же попап открывается при клике/тапе на ячейке - для мобильных устройств
+    Планетбар переверстан с использованием flex и поддерживает адаптивный дизайн
+    Верстка: металл+кристалл и дейтерий+энергия/тм объединены в блоки - так красивее работает адаптивный дизайн
+    CSS и JS из темплейта вынесены в соответствующие файлы
+    В новый планетбар добавлена поддержка вертикального расположения в навбаре
+    Добавлены разделители тысяч в попапе нового планетбара
+    Включен стандартный попап для энергии в новом планетбаре
+    Вместо букв-маркеров ресурсов (М, К, Д итд) используются иконки
+    Новый планетбар используется по умолчанию
+    В "Настройки" добавлена опция включения старого планетбара
+    В настройках добавлена опция показа ёмкости складов в ресурсбаре. Опция действует как в новом, так и в старом ресурсбарах
+    Полностью переверстан новый ресурсбар
+    Улучшена поддержка IE в старом/новом ресурсбарах
+    В старом ресурсбаре теперь так же работают всплывающие окна с подсказками
+    Теперь в ресурсбаре Альянсов не показывается ненужная строка ёмкости хранилищ
+    В ресурсбаре улучшена индикация заполнения складов:
+        - Если количество ресурсов больше объема склада (> 100%) - размер склада будет выведен красным
+        - Если ресурсов <= 100%, но > 90% - оранжевым
+        - <= 90%, но > 75% - желтым
+        - <= 75%, но > 50% - синим
+        - <= 50% - зеленым
+        - И, наконец, если склада нет и количество ресурсов на планете равно нулю - размер склада будет выведен белым
+    Ресурсбар:
+        - Цветовое кодирование к количеству производимой энергии в ресурсбаре
+        - Цветовое кодирование к попапам в ресурсбаре
+        - Отдельный попап для энергии, выводящий потребление
+[!] Вселенная
+    Добавлен режим сканирования Вселенной:
+        - Вход в режим осуществляется нажатием кнопки "Включить режима сканирования"
+        - Выход - нажатием кнопки "Выйти из режима сканирования"
+        - Вид Вселенной переключается на минималистический
+        - Убираются лишние вертикальные отступы в ячейках
+        - В режиме сканирования отключаются: меню, навбар, подсказки
+        - Так же в режиме сканирования отключаются рамки вокруг таблиц, если они были включены в Настройках
+    В режиме сканирования теперь работают попапы на лунах/планетах/итд
+[!] Квесты
+    Полностью переделан интерфейс квестов
+    Новый статус квеста - "Начат":
+        - Квест отмечается как "Начат", если был построен хоть один юнит из условий квеста;
+        - Отметка выставляется в момент завершения постройки первого юнита
+        - Уже построенные юниты не учитываются - нужно построить хотя бы один юнит, что бы сменить статус квеста
+        - Количество начатых квестов отображаетя в навбаре на кнопке квестов желтым цветом
+    На страницу просмотра квестов добавлен фильтр квестов по статусу:
+        - Состояние фильтра запоминается между визитами на страницу квестов
+    В списке квестов к фильтру добавлен вариант "Все, кроме выполненных"
+[!] bbCode
+    Переписана работа с bbCode
+    Класс BBCodeParser переделан в динамический
+    Работа со списком смайликов и bbCode вынесены в новый класс Design
+    Из класса classSupernova убран теперь неиспользуемый массив $design
+    Базовые смайлики и bbCode вынесены в vars.php
+    Новый bbCode - [urlw=URL]text[/urlw] - разворачивается в активную ссылку, которая переодит по URL в текущем окне
+    Новый префикс "faq://link.html" - разворачивается в активную ссылку на "link.html" в ЧаВо (FAQ) - если ЧаВо сконфигурировано в настройках сервера
+    Активная ссылка на боевой отчёт теперь открывается в текущем окне
+    Для bbCode [c] появилась полная версия [color]
+    Теперь URL боевого отчёта с текущего сервера автоматически преобразуется в активную ссылку на боевой отчёт
+    Теперь ссылки bbCode, открывающиеся в новом окне, подчёркиваются двойной линией
+[!] Админка
+    Небольшой тест функиональности phpBB Template Engine в "Утилитах"
+    Добавлена страница с балансом материи
+    Рефакторинг страницы просмотра информации об игроке
+    Переверстаны страницы:
+        - Администрирование чата
+        - Утилиты
+    Пункт меню "Тёмная материя" стал заголовком
+    Теперь при неудачной попытке начислить ТМ/ММ назад в форму возвращается причина начисления
+    Добавлена опция настройки логотипа сервера в меню - опция 'menu_server_logo' в таблице `config`:
+        - Пустое значение - использовать логотип по умолчанию;
+        - В остальных случаях строка трактуется, как относительный путь к картинке (от корня игры), например - 'design/images/supernova.png'
+        - Опция 'menu_server_logo_disabled' позволяет отключить логотип в меню
+    Добавлена опция отключения названия сервера в меню - опция 'menu_server_name_disabled' в таблице `config`:
+    Добавлена опция отключения даты запуска в меню - опция 'menu_launch_date_disabled' в таблице `config`:
+    Изменение ММ:
+        - Полностью переписано начисление ММ
+        - Теперь можно изменять ММ так же по ID или имени игрока
+        - Теперь перед изменением ММ можно посмотреть, что будет изменено - и лишь потом подтвердить изменения
+    Админка/ИзменениеТМ: Переписано изменение ТМ
+[!] Лицензия
+    Добавлен файл docs/credits.txt для списка используемых материалов и соответствующих копирайтов
+[!] Вёрстка
+    Перевёрстан базовый темплейт:
+        - Переделан на DIV-ах
+        - Меню, навбар и дополнения (новости, заметки итд) подключаются теперь в _global_header
+[!] Темплейты
+    Класс PTLTag:
+        - Замена элементов темплейта их значением
+        - Формат: {<prefix>{<text>|[elementID]|...}>
+            - <prefix> используется для идентификации. Должен быть отрезан перед передачей в PTLTag
+            - <text> - текст
+            - [elementID] - название элемента в квадратных скобках. Поддерживаются следующие элементы:
+                - Корневые значения {VAR} -> [VAR]
+                - Переменные темплейта из $DEFINE - {$VAR} -> [$VAR]
+                - Блоковые переменные на текущем уровне - {block.VAR] -> [block.VAR]
+            - Количество и комбинации текста и названий элементов могут быть любыми:
+                - На примере тэга {I_xxx}: {I_unit_[unit.ID]_red_[UNIT_SIZE]}
+            - Сейчас поддерживается в тэгах {R_xxx} и {I_xxx} - см. примеры ниже
+    Новый тег косвенной адресации {R_[XXX]}:
+        - Позволяет в рантайме выводить значение из элемента, чьё имя генерируется во время исполнения темплейта
+        - Пример:
+            - Пусть у нас в темплейте есть тэг {R_[RENDER]}
+            - Пусть во время исполнения корневой элемент 'VAR' равен 'VALUE';
+            - Пусть во время исполнения корневой элемент 'RENDER' равен '{VAR}'
+            - Тогда во время компиляции сгенерируется исполнимый код, который во время исполнения темплейта проделает следующее:
+                - Возьмет значение переменной 'RENDER', т.е. '{VAR}'
+                - Динамически скомпилирует код для вывода переменной '{VAR}'
+                - Исполнит его и выведет значение элемента 'VAR', т.е. в нашем конкретном случае - выведет 'VALUE'
+        - Тэг надо использовать с осторожностью, избегай вывода переменных, полученных напрямую от пользователя
+        - Содержимое элемента может быть любым тэгом из поддерживаемых темплейтом: {$VAR}, {block.VAR}, {D_xxx}, {I_xxx} итд
+    Тэг изображения {I_xxx} теперь работает через класс PTLTag
+        - Пример:
+            - Пусть в skin.ini есть записи
+                s_black_moon = "planeten/small/s_black_moon.jpg"
+                black_moon = "planeten/black_moon.jpg"
+            - Пусть в темплейте есть директива <!-- DEFINE $BLACK = 'black_moon' -->
+            - Тогда тэг {I_[$BLACK]} выведет '<HTTP путь к текущему скину>planeten/black_moon.jpg'
+            - А вот тэг {I_s_[$BLACK]} выведет '<HTTP путь к текущему скину>planeten/small/s_black_moon.jpg'
+        - В квадратных скобках можно использовать любые имена элментов, поддерживаемых PTLTag
+
+[+] Альянсы
+    Включена отключенная ранее опция рассылки сообщений членам Альянса - кнопка "Послать сообщения всему Альянсу" в блоке "Управлеение Альянсом"
+    Переверстаны некоторые страницы
+    Добавлены более понятные сообщения об ошибках при попытках сменить имя или тэг Альянса на уже существующие в игре
+[+] Интерфейс
+    Теперь так же работает перетаскивание элементов тапом на тач-скринах
+    В частности - теперь можно поменять положение окна Советника на мобильных устройствах
+[+] Обзор планеты
+    В список ресурсов на планете добавились всплывающие окна с подсказками
+
+[~] Новости
+    На обзоре страницы теперь можно ограничивать показываемые новости так же по времени публикации:
+        - Настройка game_news_overview_show в таблице config устанавливает давность новости;
+        - Задаётся в секундах. По умолчанию - новости давнее 2 недель (1209600 секунд) не показываются;
+        - При установке в 0 показывает все новости;
+    Переделана кнопка "Закрыть" в блоке новостей - вынесены стили в CSS, а обработчик нажатия - в JS
+[~] Флоты/Менеджер флотов
+    Теперь время работы менеджера флотов вычисляется непосредственно с начала его работы, а маскимальное время работы уменьшено до 3 секунд (регулируется константой GAME_FLEET_HANDLER_MAX_TIME)
+[~] Флоты/САБ
+    Переверстана страница подбора игроков в САБ
+[~] Вселенная/Переименование
+    Переверстана страница переименования Галактик/систем
+[~] UBE/Боевой отчёт
+    Добавлен BBCode для вставки в чат ссылки на бой
+
+
+
 Project "SuperNova.WS" Release 41 "Festival batch fleet navbar"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [#] core_festival 3a3.4 - Модуль "Фестивали"
