LOGIN-45d1: Streamlined login process in Installation mode. Also converted some docs to MarkDown

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,6 +11,9 @@
 
 Project "SuperNova.WS" Release 45 "11 years anniversary"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[!] Установка/обновление
+    Улучшен процесс установки/обновления
+    Расширен раздел, посвященный проблемам с установкой или обновлением в файлах /docs/install.md и /docs/install-en.md
 [!] Чат
     Полностью новый чат
     Встроенная система команд с поддержкой алиасов команд
@@ -50,6 +53,12 @@ Project "SuperNova.WS" Release 45 "11 years anniversary"
     Новая система рабочих процессов Worker
     Новая система задач и блокировок (Task/Lock). Пока используется только для обсчёта летящих флотов
     Добавлена поддержка формата изображений WebP
+[!] Документация
+    Инструкция по установке/обновлению переделана в формат MarkDown:
+        - /README -> /README.MD
+        - /docs/install.txt -> /docs/install.md
+        - /docs/install-en.txt -> /docs/install-en.md
+
 
 [+] Альянсы/Поиск
     В результаты поиска Альянсов и в "Рекомендуемые Альянсы" (см. ниже) добавлены две колонки:
